# EnlightenLM

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLEANUP_CHECKLIST.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN_v2.1.md  REFACTORING_PLAN.md  debug_merkle.py  deployment_guide.md  docker-compose.yml  fix_bayesian.py  fix_hybrid_arch.py  fix_hybrid_arch2.py  pyproject.toml  readme - old2.md  readme.md  requirements.txt  test_api.py  test_basic.py  test_chat.py  test_dashscope_api.py  test_dataset.py  test_deepseek_api.py  test_entropy_cutoff_v2.py  test_hallucination_discriminator.py  test_model_load.py  test_phase1_validation.py  test_phase2_integration.py  test_phase2_simple.py  test_security.py  usage_examples.md  verify_merkle.py
.github/: SECURITY.md
EnlightenLM_Quick_Test/: EnlightenLM_Quick_Test_1.md  Experiment_Results.md
config/: config.yaml  negative_vocab.txt  positive_vocab.txt
configs/: balanced.yaml  core_rules.yaml  custom.yaml.example  deepseek_v3.yaml  full.yaml  hyperparameters.yaml  lightweight.yaml  task_embeddings.yaml
docs/: ADR-001-model-agnostic-approach.md  CI_CD_GUIDE.md  L3_signal_mapping.md  L3优化计划.md  admin_guide.md  api_reference.md  architecture.md  architecture_v2.5.0.md  architecture_v3.0.md  audit_data_model_design.md  chat.html  deployment_guide.md  implementation_plan.md  implementation_status.md  integration_guide.md  math_verification.md  math_verification_audit.md  multimodal_van_architecture.md  security.md  user_manual.md  设计文档.md
enlighten/: __init__.py  api.py  api_server.py  async_review.py  autoscaler.py  config.py  hybrid_architecture.py  l1_generation.py  l2_working_memory.py  l3_controller.py  main.py  metacognition.py  utils.py
results/: l3_trace_20260424_200951.csv  l3_trace_20260424_204916.csv  l3_trace_20260424_210036.csv
(+142 files in other folders)
